force-app/main/default/objects/Imoveis__c/Imoveis__c.object-meta.xml
<CustomObject>
    <description>Exibe informações de imóveis</description>
    <label>Imóveis</label>
    <nameField>
        <displayFormat>IMO-{0000}</displayFormat>
        <label>Nome de imóveis</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imóveis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>