force-app/main/default/objects/Imoveis__c/fields/Copa__c.field-meta.xml
<CustomField>
    <fullName>Copa__c</fullName>
    <inlineHelpText>Insira a quantidade de copas</inlineHelpText>
    <label>Copa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>