force-app/main/default/objects/Imoveis__c/fields/Finalidade_do_Imovel__c.field-meta.xml
<CustomField>
    <fullName>Finalidade_do_Imovel__c</fullName>
    <inlineHelpText>Insira o tipo do imóvel</inlineHelpText>
    <label>Finalidade do Imóvel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>