force-app/main/default/objects/Imoveis__c/fields/Negligencia__c.field-meta.xml
<CustomField>
    <fullName>Negligencia__c</fullName>
    <label>Negligência</label>
    <length>64</length>
    <type>Text</type>
</CustomField>