force-app/main/default/objects/Imoveis__c/fields/Nivel_do_Imovel__c.field-meta.xml
<CustomField>
    <fullName>Nivel_do_Imovel__c</fullName>
    <inlineHelpText>Nível do imóvel preenchido automaticamente</inlineHelpText>
    <label>Nível do Imóvel</label>
    <length>12</length>
    <type>Text</type>
</CustomField>