force-app/main/default/objects/Imoveis__c/fields/Quantidade_de_Quartos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Quartos__c</fullName>
    <inlineHelpText>Insira a quantidade de quartos</inlineHelpText>
    <label>Quantidade de Quartos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>