force-app/main/default/objects/Imoveis__c/fields/Status_Negligencia__c.field-meta.xml
<CustomField>
    <fullName>Status_Negligencia__c</fullName>
    <formula>IMAGE(
      CASE(Negligencia__c, 
&apos;Negligência entre 3 a 10 dias&apos;, &quot;/resource/CirculosAvisos/circuloVerde.png&quot;,
&apos;Negligência entre 5 a 15 dias&apos;, &quot;/resource/CirculosAvisos/circuloAmarelo.png&quot;,
&apos;Negligência de 15 dias&apos;, &quot;/resource/CirculosAvisos/circuloVermelho.png&quot;, &apos;&apos;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Negligência</label>
    <type>Text</type>
</CustomField>