force-app/main/default/objects/Imoveis__c/fields/Suite__c.field-meta.xml
<CustomField>
    <fullName>Suite__c</fullName>
    <inlineHelpText>Insira a quantidade de suites</inlineHelpText>
    <label>Suite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>