force-app/main/default/objects/Imoveis__c/fields/Tipo_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Comercial__c</fullName>
    <label>Tipo Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Finalidade_do_Imovel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Fabrica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>