force-app/main/default/objects/Imoveis__c/fields/Tipo_do_Imovel__c.field-meta.xml
<CustomField>
    <fullName>Tipo_do_Imovel__c</fullName>
    <description>Escola o tipo do imóvel</description>
    <label>Tipo do Imóvel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhum</fullName>
                <default>true</default>
                <label>Nenhum</label>
            </value>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Apartamento</fullName>
            </value>
            <value>
                <fullName>sítio</fullName>
                <label>Sítio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>