force-app/main/default/objects/Imoveis__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <inlineHelpText>Digite o valor do imóvel</inlineHelpText>
    <label>Valor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>