force-app/main/default/objects/Imoveis__c/fields/Visita_Agendada__c.field-meta.xml
<CustomField>
    <fullName>Visita_Agendada__c</fullName>
    <inlineHelpText>Marque a data e hora da visita</inlineHelpText>
    <label>Visita Agendada</label>
    <type>DateTime</type>
</CustomField>