force-app/main/default/objects/Imoveis__c/validationRules/valida_tipo_comercial.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_tipo_comercial</fullName>
    <active>true</active>
    <errorConditionFormula>AND(


  ISPICKVAL(Finalidade_do_Imovel__c, &apos;Comercial&apos;),
				 ISPICKVAL(Tipo_Comercial__c,&apos;&apos; ) 


)</errorConditionFormula>
    <errorDisplayField>Tipo_Comercial__c</errorDisplayField>
    <errorMessage>O tipo comercial é obrigatório!</errorMessage>
</ValidationRule>