force-app/main/default/objects/Imoveis__c/listViews/listview.listView-meta.xml
<ListView>
    <fullName>listview</fullName>
    <columns>NAME</columns>
    <columns>Finalidade_do_Imovel__c</columns>
    <columns>Valor__c</columns>
    <columns>Status_Negligencia__c</columns>
    <filterScope>Mine</filterScope>
    <label>listview</label>
</ListView>