force-app/main/default/objects/Imoveis__c/listViews/Mostra_imoveis.listView-meta.xml
<ListView>
    <fullName>Mostra_imoveis</fullName>
    <columns>NAME</columns>
    <columns>Tipo_do_Imovel__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mostra imóveis</label>
</ListView>